# efficiency-wages

./: .gitignore  Makefile  README.md  analysis.ipynb  main.py  pyproject.toml  replicate.py  run_analysis.py
data/: README.md
data/derived/: agent_wage_long.csv  analysis_sample.csv  principal_beliefs_long.csv  principals.csv  sample_counts.json
data/raw/efficiency/: combined.csv
data/raw/ge_prosocial/: combined.csv
data/raw/neutral/: combined.csv
docs/: technical.md
outputs/: README.md  correspondence.md  replication_report.html  setup_report.json  verification_report.json
outputs/figures/: manifest.json
outputs/tables/: appendix_tables_results.csv  main_tables_results.csv
results/: README.md
results/appendix/tables/: table_a1_summary_statistics.csv  table_a1_summary_statistics.tex  table_a2_effort_ge_prosocial.csv  table_a2_effort_ge_prosocial.tex  table_a3_effort_neutral_efficiency.csv  table_a3_effort_neutral_efficiency.tex  table_a4_acceptance_neutral.csv  table_a4_acceptance_neutral.tex  table_a5_acceptance_efficiency.csv  table_a5_acceptance_efficiency.tex  table_a6_effort_neutral.csv  table_a6_effort_neutral.tex  (+6 more)
results/diagnostics/: correspondence.md  diagnostics.html  setup_report.json  verification_report.json
src/: __init__.py  environment.py  paths.py  replication_paths.py  stata.py
src/analysis/: __init__.py  figures.py  format_tables.py  run_stata_tables.py  tables_appendix.do  tables_appendix.py  tables_main.do
src/data/: __init__.py  assemble.py
src/verification/: __init__.py  checks.py  correspondence.py  report.py
(+11 files in other folders)
