[project]
name = "efficiency-wages"
version = "0.1.0"
description = "Analysis package for Efficiency Wages with Motivated Agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.25",
    "jupyter>=1.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "pystata>=0.0.1",
    "scipy>=1.15.3",
    "seaborn>=0.12",
    "stata-setup>=0.1.3",
    "statsmodels>=0.14.6",
]
